update the front page usability
